# karvon

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  README.md  _config.yml  configuration.md  getting-started.md  http-api.md  ssh-remote-machines.md  troubleshooting.md
scripts/: desktop-install.mjs  desktop-open.mjs  seed-wiki.sh  set-version.mjs  tauri-build.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_deploy.rs  commands.rs  deploy.rs  health.rs  http_api.rs  main.rs  mediaguard_preset.rs  models.rs  process_manager.rs  ssh_executor.rs  state.rs  storage.rs
src/components/: AppShell.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ErrorBoundary.tsx  LiveLogViewer.tsx  MetricSparkline.tsx  RuntimeDot.tsx  SidebarProjects.tsx  StatusBadge.tsx
src/features/dashboard/: DashboardOverview.tsx
src/features/logs/: LogsView.tsx
src/features/machines/: MachinesView.tsx
src/features/processes/: ProcessDetailPanel.tsx
src/features/projects/: DeploySection.tsx  ProjectDetailView.tsx  ProjectsView.tsx
src/features/settings/: SettingsView.tsx
src/lib/: api.ts  autostart.ts  errorReporting.ts  folderPicker.ts  memory.ts  mockApi.ts  notifications.ts  status.ts  theme.ts  time.ts  updater.ts
src/stores/: orchestratorStore.ts
src/types/: domain.ts
