[package]
name = "local-project-orchestrator"
version = "0.1.0"
description = "macOS local project orchestration panel"
authors = ["Local Project Orchestrator"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
nix = { version = "0.29", features = ["process", "resource", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-shell = "2"
thiserror = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
