[package]
name = "karvon"
version = "0.2.0"
description = "Cross-platform local & remote project orchestration panel (macOS + Windows)"
authors = ["Karvon"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2.10.1"
thiserror = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.7", features = ["cors"] }
rand = "0.8"

# POSIX process-group + rlimit syscalls. Unix-only — the Windows process
# supervision path (see src/platform/windows.rs) uses creation flags + taskkill
# instead, so `nix` must not be pulled in for the Windows target.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "resource", "signal"] }
